--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,16 @@
 /*  your css code here. If applicable */
+.container{
+	display: flex;
+	height: 100vh;
+}
+.sidebar {
+    flex: 1;
+    background-color: #D7E8D4;
+    padding: 1em;
+    min-width: 1/6 * 100vw;
+}
+.content {
+    flex: 5;
+    display: flex;
+    flex-direction: column;
+}
