--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 	display: flex;
 	height: 100vh;
 }
-.sidebar {
+.side-bar {
     flex: 1;
     background-color: #D7E8D4;
     padding: 1em;
@@ -14,3 +14,27 @@
     display: flex;
     flex-direction: column;
 }
+header,
+footer {
+    background-color: yellowgreen;
+    flex: 1;
+    padding: 1em;
+}
+.article {
+    flex: 3;
+    padding: 1em;
+    min-height: 60vh;
+}
+.aside {
+    flex: 1;
+    padding: 1em;
+}
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .side-bar {
+        min-width: auto;
+        width: 100%;
+    }
