--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,39 @@
 /*  your css code here. If applicable */
-.container{
-	display: flex;
-	height: 100vh;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
-.side-bar {
-    flex: 1;
+
+.container {
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+}
+
+.navbar {
     background-color: #D7E8D4;
+    flex: 1;
     padding: 1em;
-    min-width: 1/6 * 100vw;
 }
 .content {
-    flex: 5;
     display: flex;
     flex-direction: column;
+    flex: 5;
 }
-header,
-footer {
+
+.header, .footer {
     background-color: yellowgreen;
     flex: 1;
     padding: 1em;
 }
+
+.main-content {
+    display: flex;
+    flex-direction: row;
+    flex: 4;
+}
+
 .article {
     flex: 3;
     padding: 1em;
@@ -29,12 +43,3 @@ footer {
     flex: 1;
     padding: 1em;
 }
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column;
-    }
-
-    .side-bar {
-        min-width: auto;
-        width: 100%;
-    }
